[gd_scene load_steps=3 format=3 uid="uid://dj8w3umliqjsh"]

[ext_resource type="Script" path="res://Game/Scripts/Main/MainGame.gd" id="1_jx3jw"]
[ext_resource type="LabelSettings" uid="uid://b3ao1n60dyrs4" path="res://Game/Tres/LabelSettings.tres" id="2_770yt"]

[node name="Game" type="Node2D"]
script = ExtResource("1_jx3jw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DescBox" type="Panel" parent="Control"]
layout_mode = 2
offset_left = 14.0
offset_top = 9.0
offset_right = 399.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescLabel" type="Label" parent="Control/DescBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 7.0
offset_right = -10.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("2_770yt")
autowrap_mode = 3

[node name="Inputs" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 408.0
offset_top = 13.0
offset_right = 536.0
offset_bottom = 42.0

[node name="InputLabel" type="Label" parent="Control/Inputs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 3.0
offset_right = -6.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("2_770yt")

[node name="Outputs" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 408.0
offset_top = 54.0
offset_right = 536.0
offset_bottom = 83.0

[node name="OutputLabel" type="Label" parent="Control/Outputs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("2_770yt")
